# ir-smart-led-controller

./: .gdbinit  .gitignore  Cargo.toml  memory.x  openocd.cfg  readme.md  rust-toolchain.toml
.cargo/: config  config.toml
pcb/: ir-smart-led-controller.csv  ir-smart-led-controller.kicad_pcb  ir-smart-led-controller.kicad_prl  ir-smart-led-controller.kicad_pro  ir-smart-led-controller.kicad_sch  ir-smart-led-controller.kicad_sym  sym-lib-table
src/: lantern.rs  main.rs  strip.rs
