[package]
name = "lantern-controller"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dotcypress/ir-smart-led-controller"
version = "0.0.1"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
infrared = "0.11.0"
panic-halt = "0.2.0"
panic-probe = "0.3.0"
smart-leds = "0.3.0"
stm32g0xx-hal = { git = "https://github.com/stm32-rs/stm32g0xx-hal", features = ["rt", "stm32g030"] }
ushell = "0.3.5"
ws2812-spi = { version = "0.3.0", features = [] }

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = true
